--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@mui/material": "^5.15.6",
+    "@phosphor-icons/react": "^2.0.15",
     "install": "^0.13.0",
     "mapbox-gl": "^3.1.0",
     "next": "14.0.4",
