--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/material": "^5.15.6",
     "@phosphor-icons/react": "^2.0.15",
     "install": "^0.13.0",
     "mapbox-gl": "^3.1.0",
+    "negotiator": "^0.6.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -28,6 +30,7 @@
     "@cloudflare/workers-types": "^4.20240117.0",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
     "@types/mapbox-gl": "^2.7.19",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
